# pose_trajectory_ws

./: .gitignore
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/pose_trajectory_controller/: AxisTolerance.h  EulerPose.h  FollowPoseTrajectoryAction.h  FollowPoseTrajectoryActionFeedback.h  FollowPoseTrajectoryActionGoal.h  FollowPoseTrajectoryActionResult.h  FollowPoseTrajectoryFeedback.h  FollowPoseTrajectoryGoal.h  FollowPoseTrajectoryResult.h  MergeTwoPoseTraj.h  MergeTwoPoseTrajRequest.h  MergeTwoPoseTrajResponse.h  PoseTolerance.h  PoseTrajectory.h  PoseTrajectoryControllerState.h  PoseTrajectoryPoint.h  QueryTrajectoryState.h  QueryTrajectoryStateRequest.h  QueryTrajectoryStateResponse.h
devel/include/pose_trajectory_merger/: MergeTwoPoseTraj.h  MergeTwoPoseTrajRequest.h  MergeTwoPoseTrajResponse.h
devel/lib/pkgconfig/: pose_trajectory_controller.pc  pose_trajectory_merger.pc  ryan_gesture_generation.pc
devel/lib/pose_trajectory_controller/: pose_trajectory_merger_client  pose_trajectory_merger_server
devel/lib/python2.7/dist-packages/pose_trajectory_controller/msg/: _AxisTolerance.py  _EulerPose.py  _FollowPoseTrajectoryAction.py  _FollowPoseTrajectoryActionFeedback.py  _FollowPoseTrajectoryActionGoal.py  _FollowPoseTrajectoryActionResult.py  _FollowPoseTrajectoryFeedback.py  _FollowPoseTrajectoryGoal.py  _FollowPoseTrajectoryResult.py  _PoseTolerance.py  _PoseTrajectory.py  _PoseTrajectoryControllerState.py  _PoseTrajectoryPoint.py  __init__.py  _eulerPose.py
devel/share/pose_trajectory_controller/cmake/: pose_trajectory_controller-msg-extras.cmake  pose_trajectory_controller-msg-paths.cmake  pose_trajectory_controllerConfig.cmake
devel/share/pose_trajectory_controller/msg/: FollowPoseTrajectoryAction.msg  FollowPoseTrajectoryActionFeedback.msg  FollowPoseTrajectoryActionGoal.msg  FollowPoseTrajectoryActionResult.msg  FollowPoseTrajectoryFeedback.msg  FollowPoseTrajectoryGoal.msg
devel/share/pose_trajectory_merger/cmake/: pose_trajectory_merger-msg-paths.cmake  pose_trajectory_mergerConfig.cmake
devel/share/roseus/ros/pose_trajectory_controller/: manifest.l
devel/share/roseus/ros/pose_trajectory_merger/: manifest.l
devel/share/ryan_gesture_generation/cmake/: ryan_gesture_generationConfig.cmake
src/: CMakeLists.txt
src/pose_trajectory_controller/: CMakeLists.basic.txt  CMakeLists.txt  package.basic.xml  pose_trajectory_controller_plugins.xml
src/pose_trajectory_controller/action/: FollowPoseTrajectory.action
src/pose_trajectory_controller/include/pose_trajectory_controller/: hardware_interface_adapter.h  init_pose_trajectory.h  pose_trajectory_controller.h  pose_trajectory_controller_impl.h  pose_trajectory_msg_utils.h  pose_trajectory_segment.h  tolerances.h
src/pose_trajectory_controller/include/pose_trajectory_merger/: pose_trajectory_merger.h  pose_trajectory_merger_impl.h
src/pose_trajectory_controller/msg/: AxisTolerance.msg  PoseTrajectory.msg  PoseTrajectoryControllerState.msg  PoseTrajectoryPoint.msg
src/pose_trajectory_controller/src/: merger_test_client_node.cpp  pose_trajectory_controller.cpp  pose_trajectory_merger.cpp  pose_trajectory_merger_node.cpp
src/pose_trajectory_controller/srv/: MergeTwoPoseTraj.srv
src/ryan_gesture_generation/: CMakeLists.txt
src/ryan_gesture_generation/include/ryan_gesture_generation/: dynamic_gesture_generators.h
src/ryan_gesture_generation/src/: dynamic_gesture_generators.cpp  dynamic_gesture_tester.cpp
(+79 files in other folders)
